--- a/src/Login/register.html
+++ b/src/Login/register.html
@@ -45,7 +45,7 @@
           </li>
           <li>
             <a
-              href="./Orders/orderList.html"
+              href="../Orders/orderList.html"
               class="flex items-center gap-2 text-[12px]"
             >
               <i class="fa-solid fa-truck-fast"></i>
