--- a/src/Orders/orderList.html
+++ b/src/Orders/orderList.html
@@ -161,7 +161,7 @@
                 $90
               </div>
               <a
-                hre="./orderDetails.html"
+                href="orderDetails.html"
                 class="flex gap-x-2 items-center text-sm"
               >
                 <i class="fa-solid fa-pencil"></i>
