--- a/src/Orders/OrderModal.html
+++ b/src/Orders/OrderModal.html
@@ -65,7 +65,7 @@
       </ul>
     </nav>
 
-    <section class="my-5 container mx-auto p-20 flex">
+    <section class="my-5 container mx-auto p-20 flex relative">
       <div class="w-full relative">
         <img
           src="../images/mainPage.png"
@@ -74,7 +74,7 @@
         />
         <div class="bg-carrousel-color w-4/5 h-3/5 absolute top-40 z-10"></div>
       </div>
-      <form
+      <div
         class="w-full border border-gray-200 rounded-sm p-4 flex flex-col gap-y-8"
       >
         <div
@@ -224,7 +224,37 @@
             </button>
           </a>
         </div>
-      </form>
+      </div>
+      <div
+        class="fixed top-1/3 right-1/2 translate-x-1/2 rounded-md bg-footer-color h-1/4 w-1/3 z-50 p-4 flex flex-col justify-between"
+      >
+        <div class="flex gap-x-2 items-start">
+          <i class="fa-solid fa-circle-exclamation pt-1"></i>
+          <div>
+            <span>Confirmation</span>
+            <div>Confirm Order Detail changes?</div>
+          </div>
+        </div>
+        <div class="flex justify-between">
+          <div></div>
+          <div class="flex gap-x-6">
+            <a href="orderList.html">
+              <button
+                class="border-[1px] border-gray-200 py-1 text-sm font-lora px-4 rounded-sm"
+              >
+                Cancel
+              </button>
+            </a>
+            <a href="orderList.html">
+              <button
+                class="bg-black py-1 text-sm font-lora text-white px-4 rounded-sm"
+              >
+                Confirm
+              </button>
+            </a>
+          </div>
+        </div>
+      </div>
     </section>
 
     <footer class="h-14 bg-footer-color text-xs">
