Replaced temporary images with correct ones

--- a/src/carrousel2.html
+++ b/src/carrousel2.html
@@ -26,7 +26,10 @@
       class="h-14 flex container items-center bg-white-color m-auto text-important-black-color"
     >
       <ul class="flex justify-between items-center w-full">
-        <li class="text-xl font-medium font-lora">ITP Library</li>
+        <ul class="text-xl font-medium font-lora flex gap-x-2 items-center">
+          <img src="images/logo.png" alt="" class="" />
+          <li>ITP Library</li>
+        </ul>
         <ul class="flex gap-x-10 uppercase font-medium font-roboto">
           <li>
             <a href="index.html" class="flex items-center gap-2 text-[12px]">
@@ -79,9 +82,9 @@
         </div>
         <div class="w-3/5 flex justify-center items-center h-full">
           <img
-            src="./images/mainPage.png"
+            src="./images/carrousel2.png"
             alt="carrousel-first-pic"
-            class="w-1/2 h-1/2 rounded-3xl object-cover"
+            class="w-2/3 h-2/3 rounded-3xl object-cover"
           />
         </div>
       </aside>
@@ -92,17 +95,17 @@
             <div class="py-8">Best Books of the month</div>
             <div class="flex flex-wrap gap-x-8">
               <div class="flex flex-col w-[15%]">
-                <a href="viewBook.html" class="flex flex-col h-full">
+                <a href="viewBook.html" class="flex flex-col h-full w-full">
                   <img
-                    src="./images/mainPage.png"
+                    src="./images/the-idiot.jpg"
                     alt=""
                     class="h-[70%] w-full"
                   />
-                  <div class="h-[30%] flex py-2 flex-col pt-4">
-                    <div class="flex justify-between">
-                      <div class="">
+                  <div class="h-[30%] flex flex-col pt-4 w-full">
+                    <div class="flex justify-between w-full">
+                      <div class="w-3/4">
                         <div
-                          class="text-important-black-color font-lora font-bold text-md"
+                          class="text-important-black-color font-lora font-bold text-md line-clamp-2"
                         >
                           Hero with Gold
                         </div>
@@ -119,24 +122,24 @@
                   </div>
                 </a>
                 <button
-                  class="flex justify-center gap-x-2 w-full text-xs bg-black text-white-color items-center py-1 rounded-sm"
+                  class="flex justify-center gap-x-2 w-full text-xs bg-black text-white-color items-center py-1.5 rounded-sm"
                 >
                   <i class="fa fa-cart-shopping"></i>
                   <div>Add to Cart</div>
                 </button>
               </div>
               <div class="flex flex-col w-[15%]">
-                <a href="viewBook.html" class="flex flex-col h-full">
+                <a href="viewBook.html" class="flex flex-col h-full w-full">
                   <img
-                    src="./images/mainPage.png"
+                    src="./images/the-book-of-disquiet.jpg"
                     alt=""
                     class="h-[70%] w-full"
                   />
-                  <div class="h-[30%] flex flex-col pt-4">
-                    <div class="flex justify-between">
-                      <div class="w-4/5">
+                  <div class="h-[30%] flex flex-col pt-4 w-full">
+                    <div class="flex justify-between w-full">
+                      <div class="w-3/4">
                         <div
-                          class="text-important-black-color font-lora font-bold text-md"
+                          class="text-important-black-color font-lora font-bold text-md line-clamp-2"
                         >
                           Goddess Of Insanity
                         </div>
@@ -153,22 +156,18 @@
                   </div>
                 </a>
                 <button
-                  class="flex justify-center gap-x-2 w-full text-xs bg-black text-white-color items-center py-1 rounded-sm"
+                  class="flex justify-center gap-x-2 w-full text-xs bg-black text-white-color items-center py-1.5 rounded-sm"
                 >
                   <i class="fa fa-cart-shopping"></i>
                   <div>Add to Cart</div>
                 </button>
               </div>
               <div class="flex flex-col w-[15%]">
-                <a href="viewBook.html" class="flex flex-col h-full">
-                  <img
-                    src="./images/mainPage.png"
-                    alt=""
-                    class="h-[70%] w-full"
-                  />
-                  <div class="h-[30%] flex flex-col pt-4">
-                    <div class="flex justify-between">
-                      <div class="">
+                <a href="viewBook.html" class="flex flex-col h-full w-full">
+                  <img src="./images/medea.jpg" alt="" class="h-[70%] w-full" />
+                  <div class="h-[30%] flex flex-col pt-4 w-full">
+                    <div class="flex justify-between w-full">
+                      <div class="w-3/4">
                         <div
                           class="text-important-black-color font-lora font-bold text-md line-clamp-2"
                         >
@@ -187,7 +186,7 @@
                   </div>
                 </a>
                 <button
-                  class="flex justify-center gap-x-2 w-full text-xs bg-black text-white-color items-center py-1 rounded-sm"
+                  class="flex justify-center gap-x-2 w-full text-xs bg-black text-white-color items-center py-1.5 rounded-sm"
                 >
                   <i class="fa fa-cart-shopping"></i>
                   <div>Add to Cart</div>
@@ -199,24 +198,24 @@
             <div class="py-8">Rcently Added</div>
             <div class="flex flex-wrap gap-x-8">
               <div class="flex flex-col w-[15%]">
-                <a href="viewBook.html" class="flex flex-col h-full">
+                <a href="viewBook.html" class="flex flex-col h-full w-full">
                   <img
-                    src="./images/mainPage.png"
+                    src="./images/the-idiot.jpg"
                     alt=""
                     class="h-[70%] w-full"
                   />
-                  <div class="h-[30%] flex flex-col pt-4">
-                    <div class="flex justify-between">
-                      <div class="w-4/5">
+                  <div class="h-[30%] flex flex-col pt-4 w-full">
+                    <div class="flex justify-between w-full">
+                      <div class="w-3/4">
                         <div
-                          class="text-important-black-color font-lora font-bold text-md"
+                          class="text-important-black-color font-lora font-bold text-md line-clamp-2"
                         >
-                          Goddess Of Insanity
+                          Hero of Gold
                         </div>
                         <div
                           class="text-normal-black-color font-lora font-normal text-xs"
                         >
-                          Dennis Jenkings
+                          Dougie Rogers
                         </div>
                       </div>
                       <div class="text-beige-color font-roboto font-bold">
@@ -226,26 +225,26 @@
                   </div>
                 </a>
                 <button
-                  class="flex justify-center gap-x-2 w-full text-xs bg-black text-white-color items-center py-1 rounded-sm"
+                  class="flex justify-center gap-x-2 w-full text-xs bg-black text-white-color items-center py-1.5 rounded-sm"
                 >
                   <i class="fa fa-cart-shopping"></i>
                   <div>Add to Cart</div>
                 </button>
               </div>
               <div class="flex flex-col w-[15%]">
-                <a href="viewBook.html" class="flex flex-col h-full">
+                <a href="viewBook.html" class="flex flex-col h-full w-full">
                   <img
-                    src="./images/mainPage.png"
+                    src="./images/the-book-of-disquiet.jpg"
                     alt=""
                     class="h-[70%] w-full"
                   />
-                  <div class="h-[30%] flex flex-col pt-4">
-                    <div class="flex justify-between">
-                      <div class="w-4/5">
+                  <div class="h-[30%] flex flex-col pt-4 w-full">
+                    <div class="flex justify-between w-full">
+                      <div class="w-3/4">
                         <div
-                          class="text-important-black-color font-lora font-bold text-md"
+                          class="text-important-black-color font-lora font-bold text-md line-clamp-2"
                         >
-                          Goddess Of Insanity
+                          Goddesss of Insanity
                         </div>
                         <div
                           class="text-normal-black-color font-lora font-normal text-xs"
@@ -260,31 +259,27 @@
                   </div>
                 </a>
                 <button
-                  class="flex justify-center gap-x-2 w-full text-xs bg-black text-white-color items-center py-1 rounded-sm"
+                  class="flex justify-center gap-x-2 w-full text-xs bg-black text-white-color items-center py-1.5 rounded-sm"
                 >
                   <i class="fa fa-cart-shopping"></i>
                   <div>Add to Cart</div>
                 </button>
               </div>
               <div class="flex flex-col w-[15%]">
-                <a href="viewBook.html" class="flex flex-col h-full">
-                  <img
-                    src="./images/mainPage.png"
-                    alt=""
-                    class="h-[70%] w-full"
-                  />
-                  <div class="h-[30%] flex flex-col pt-4">
-                    <div class="flex justify-between">
-                      <div class="w-4/5">
+                <a href="viewBook.html" class="flex flex-col h-full w-full">
+                  <img src="./images/medea.jpg" alt="" class="h-[70%] w-full" />
+                  <div class="h-[30%] flex flex-col pt-4 w-full">
+                    <div class="flex justify-between w-full">
+                      <div class="w-3/4">
                         <div
-                          class="text-important-black-color font-lora font-bold text-md"
+                          class="text-important-black-color font-lora font-bold text-md line-clamp-2"
                         >
-                          Goddess Of Insanity
+                          Thieves Of The Lost World of GWhateverWasMissing
                         </div>
                         <div
                           class="text-normal-black-color font-lora font-normal text-xs"
                         >
-                          Dennis Jenkings
+                          Quinn Holland
                         </div>
                       </div>
                       <div class="text-beige-color font-roboto font-bold">
@@ -294,7 +289,7 @@
                   </div>
                 </a>
                 <button
-                  class="flex justify-center gap-x-2 w-full text-xs bg-black text-white-color items-center py-1 rounded-sm"
+                  class="flex justify-center gap-x-2 w-full text-xs bg-black text-white-color items-center py-1.5 rounded-sm"
                 >
                   <i class="fa fa-cart-shopping"></i>
                   <div>Add to Cart</div>
@@ -314,11 +309,11 @@
             IT Perspectives
           </div>
         </div>
-        <button class="p-1 px-1.5 rounded-sm bg-black">
-          <a href="#">
+        <a href="#">
+          <button class="p-1 px-1.5 rounded-sm bg-black">
             <i class="fa-solid fa-chevron-up text-white"></i>
-          </a>
-        </button>
+          </button>
+        </a>
       </div>
     </footer>
   </body>
