--- a/src/shoppingCart.html
+++ b/src/shoppingCart.html
@@ -72,7 +72,7 @@
             <div class="flex gap-x-8">
               <div class="w-20 h-28">
                 <img
-                  src="./images/mainPage.png"
+                  src="./images/the-idiot.jpg"
                   alt="image-order"
                   class="w-full h-full"
                 />
@@ -105,7 +105,7 @@
             <div class="flex gap-x-8">
               <div class="w-20 h-28">
                 <img
-                  src="./images/mainPage.png"
+                  src="./images/medea.jpg"
                   alt="image-order"
                   class="w-full h-full"
                 />
