--- a/src/Login/register.html
+++ b/src/Login/register.html
@@ -26,7 +26,10 @@
       class="h-14 flex container items-center bg-white-color m-auto text-important-black-color"
     >
       <ul class="flex justify-between items-center w-full">
-        <li class="text-xl font-medium font-lora">ITP Library</li>
+        <ul class="text-xl font-medium font-lora flex gap-x-2 items-center">
+          <img src="images/logo.png" alt="" class="" />
+          <li>ITP Library</li>
+        </ul>
         <ul class="flex gap-x-10 uppercase font-medium font-roboto">
           <li>
             <a href="../index.html" class="flex items-center gap-2 text-[12px]">
