--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,10 @@
       class="h-14 flex container items-center bg-white-color m-auto text-important-black-color"
     >
       <ul class="flex justify-between items-center w-full">
-        <li class="text-xl font-medium font-lora">ITP Library</li>
+        <ul class="text-xl font-medium font-lora flex gap-x-2 items-center">
+          <img src="images/logo.png" alt="" class="" />
+          <li>ITP Library</li>
+        </ul>
         <ul class="flex gap-x-10 uppercase font-medium font-roboto">
           <li>
             <a href="index.html" class="flex items-center gap-2 text-[12px]">
@@ -79,9 +82,9 @@
         </div>
         <div class="w-3/5 flex justify-center items-center h-full">
           <img
-            src="./images/mainPage.png"
+            src="./images/carrousel1.png"
             alt="carrousel-first-pic"
-            class="w-1/2 h-1/2 rounded-3xl object-cover"
+            class="w-2/3 h-2/3 rounded-3xl object-cover"
           />
         </div>
       </aside>
@@ -94,7 +97,7 @@
               <div class="flex flex-col w-[15%]">
                 <a href="viewBook.html" class="flex flex-col h-full w-full">
                   <img
-                    src="./images/mainPage.png"
+                    src="./images/the-idiot.jpg"
                     alt=""
                     class="h-[70%] w-full"
                   />
@@ -128,7 +131,7 @@
               <div class="flex flex-col w-[15%]">
                 <a href="viewBook.html" class="flex flex-col h-full w-full">
                   <img
-                    src="./images/mainPage.png"
+                    src="./images/the-book-of-disquiet.jpg"
                     alt=""
                     class="h-[70%] w-full"
                   />
@@ -161,11 +164,7 @@
               </div>
               <div class="flex flex-col w-[15%]">
                 <a href="viewBook.html" class="flex flex-col h-full w-full">
-                  <img
-                    src="./images/mainPage.png"
-                    alt=""
-                    class="h-[70%] w-full"
-                  />
+                  <img src="./images/medea.jpg" alt="" class="h-[70%] w-full" />
                   <div class="h-[30%] flex flex-col pt-4 w-full">
                     <div class="flex justify-between w-full">
                       <div class="w-3/4">
@@ -201,7 +200,7 @@
               <div class="flex flex-col w-[15%]">
                 <a href="viewBook.html" class="flex flex-col h-full w-full">
                   <img
-                    src="./images/mainPage.png"
+                    src="./images/the-idiot.jpg"
                     alt=""
                     class="h-[70%] w-full"
                   />
@@ -235,7 +234,7 @@
               <div class="flex flex-col w-[15%]">
                 <a href="viewBook.html" class="flex flex-col h-full w-full">
                   <img
-                    src="./images/mainPage.png"
+                    src="./images/the-book-of-disquiet.jpg"
                     alt=""
                     class="h-[70%] w-full"
                   />
@@ -268,11 +267,7 @@
               </div>
               <div class="flex flex-col w-[15%]">
                 <a href="viewBook.html" class="flex flex-col h-full w-full">
-                  <img
-                    src="./images/mainPage.png"
-                    alt=""
-                    class="h-[70%] w-full"
-                  />
+                  <img src="./images/medea.jpg" alt="" class="h-[70%] w-full" />
                   <div class="h-[30%] flex flex-col pt-4 w-full">
                     <div class="flex justify-between w-full">
                       <div class="w-3/4">
