--- a/src/viewBook.html
+++ b/src/viewBook.html
@@ -65,7 +65,7 @@
     <section class="flex full-page items-center container m-auto w-3/4">
       <div class="flex">
         <div class="w-2/5 h-96">
-          <img src="./images//mainPage.png" alt="" class="h-full w-2/3" />
+          <img src="./images/medea.jpg" alt="" class="h-full w-2/3" />
         </div>
         <div class="w-3/5">
           <div class="flex gap-y-8 flex-col h-full">
