--- a/src/Orders/orderList.html
+++ b/src/Orders/orderList.html
@@ -27,7 +27,7 @@
     >
       <ul class="flex justify-between items-center w-full">
         <ul class="text-xl font-medium font-lora flex gap-x-2 items-center">
-          <img src="images/logo.png" alt="" class="" />
+          <img src="../images/logo.png" alt="" class="" />
           <li>ITP Library</li>
         </ul>
         <ul class="flex gap-x-10 uppercase font-medium font-roboto">
