--- a/src/Login/register.html
+++ b/src/Login/register.html
@@ -69,7 +69,7 @@
       <div class="w-full h-full flex p-8">
         <div class="h-full w-1/2">
           <img
-            src="../images/mainPage.png"
+            src="../images/auth.png"
             alt=""
             class="h-full w-[70%] object-cover mx-auto"
           />
