--- a/src/carrousel2.html
+++ b/src/carrousel2.html
@@ -27,7 +27,7 @@
     >
       <ul class="flex justify-between items-center w-full">
         <ul class="text-xl font-medium font-lora flex gap-x-2 items-center">
-          <img src="images/logo.png" alt="" class="" />
+          <img src="images/logo.png" alt="logo" class="" />
           <li>ITP Library</li>
         </ul>
         <ul class="flex gap-x-10 uppercase font-medium font-roboto">
@@ -56,7 +56,10 @@
             </a>
           </li>
           <li>
-            <a href="login.html" class="flex items-center gap-2 text-[12px]">
+            <a
+              href="./Login/login.html"
+              class="flex items-center gap-2 text-[12px]"
+            >
               <i class="fa-solid fa-user"></i>
               <span>Login</span>
             </a>
