--- a/src/shoppingCart.html
+++ b/src/shoppingCart.html
@@ -157,7 +157,7 @@
             <div class="text-beige-color font-roboto font-bold text-xl">
               $90
             </div>
-            <a href="orderDetails.html">
+            <a href="./Orders/orderDetails.html">
               <button
                 class="text-center bg-black border-2 border-black rounded-md text-xs text-white px-10 py-1.5"
               >
